cluster/apps/default/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name wordpress
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  selector: *labels
  ports:
    - name: &port http
      protocol: TCP
      port: 80
      targetPort: *port
  type: ClusterIP
