cluster/apps/default/wordpress/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name wordpress
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`${SECRET_DOMAIN_1}`,`www.${SECRET_DOMAIN_1}`)
      middlewares:
        - name: site-headers@file
        - name: wordpress
          namespace: default
      services:
        - name: *name
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_1}-prod-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: &name wordpress
  labels:
    app.kubernetes.io/name: *name
spec:
  redirectRegex:
    permanent: true
    regex: "https?://www.${SECRET_DOMAIN_1}(.*)"
    replacement: "https://${SECRET_DOMAIN_1}/${1}"
